--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -434,6 +434,7 @@
   "setGenLockAutoType": "En auto-completado",
   "setGenLockOrSleep": "Cuando el ordenador esté bloqueado o suspendido",
   "setGenStorage": "Almacenamiento",
+  "setGenStorageLogout": "Cerrar sesión",
   "setGenShowAdvanced": "Mostrar opciones avanzadas",
   "setGenDevTools": "Mostrar herramientas de desarrollador",
   "setGenTryBeta": "Probar versión beta hasta reiniciar",
@@ -588,6 +589,9 @@
   "dropboxSetupDesc": "Son necesarios ciertos datos de configuración para usar Dropbox en una aplicación auto-alojada. Por favor, crea tu aplicación de Dropbox y rellena su clave aquí debajo.",
   "dropboxAppKey": "Clave de aplicación de Dropbox",
   "dropboxAppKeyDesc": "Copia la clave de tu aplicación de Dropbox (modo desarrollador)",
+  "dropboxAppKeyHint": "clave de tu app",
+  "dropboxAppSecret": "Secreto de la app de Dropbox",
+  "dropboxAppSecretDesc": "El secreto se puede encontrar junto a la clave de la app",
   "dropboxFolder": "Carpeta de aplicación",
   "dropboxFolderDesc": "Si tu aplicación está enlazada a todo tu Dropbox (no a la carpeta de la aplicación), especifica la carpeta con tus archivos kbdx aquí",
   "dropboxFolderSettingsDesc": "Selecciona cualquier carpeta de tu Dropbox en la que se encuentren los archivos (carpeta raíz por defecto)",
