--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -357,6 +357,7 @@
   "appRightsAlert": "KeeWeb alkalmazás zárolása",
   "appRightsAlertBody1": "A KeeWeb alkalmazás jelenleg nem védett a jogosulatlan változtatásoktól. Kérjük önt, hogy az alkalmazás kizárólag adminisztrátorok számára legyen írható.",
   "appRightsAlertBody2": "Nem szeretne illetékteleneknek jogosultságot adni? Beállíthatja a Terminálból",
+  "appBrowserAuthComplete": "Azonosítás kész, most már bezárhatja ezt a lapot.",
   "setGenTitle": "Általános beállítások",
   "setGenUpdate": "Frissítés",
   "setGenNewVersion": "Új alkalmazás verzió jelent meg és került letöltésre",
@@ -433,6 +434,7 @@
   "setGenLockAutoType": "Automatikus gépelés esetén",
   "setGenLockOrSleep": "Amikor a számítógép zárolt, vagy alvó állapotban van",
   "setGenStorage": "Tároló",
+  "setGenStorageLogout": "Kijelentkezés",
   "setGenShowAdvanced": "Haladó beállítások megjelenítése",
   "setGenDevTools": "Fejlesztőeszközök megjelenítése",
   "setGenTryBeta": "Béta verzió kipróbálása újraindításig",
@@ -577,7 +579,7 @@
   "setHelpProblems1": "Ha valami nem sikerül, kérem {}",
   "setHelpProblems2": "vagy {}",
   "setHelpOpenIssue": "nyisson egy kérdést a GitHub-on",
-  "setHelpContactLink": "vegye fel a kapcsolatot követlenül egy fejlesztővel",
+  "setHelpContactLink": "vegye fel a kapcsolatot követlenül a fejlesztővel",
   "setHelpAppInfo": "Alkalmazás információ",
   "setHelpOtherPlatforms": "Más platformok",
   "setHelpDesktopApps": "Asztali alkalmazások",
@@ -587,6 +589,7 @@
   "dropboxSetupDesc": "Némi beállításra van szükség a Dropbox használatához, a saját kiszolgálón működtetett alkalmazás esetén. Kérem készítse el a saját Dropbox alkalmazását és lent adja meg annak kulcsát.",
   "dropboxAppKey": "Dropbox alkalmazás kulcs",
   "dropboxAppKeyDesc": "Másolja ide a kulcsot a Dropbox alkalmazásából (Fejlesztői beállítások)",
+  "dropboxAppKeyHint": "az Ön app kulcsa",
   "dropboxFolder": "Alkalmazás mappa",
   "dropboxFolderDesc": "Amennyiben az alkalmazás a teljes Dropbox-hoz lett kapcsolva (nem alkalmazás mappához), adja meg a a kdbx fájljait tartalmazó mappát.",
   "dropboxFolderSettingsDesc": "Adja meg a Dropbox mappát, ahol a fájlok tárolva lesznek (gyökérmappa az alapértelmezett )",
