--- a/docs/translations/sk/sk.json
+++ b/docs/translations/sk/sk.json
@@ -434,6 +434,7 @@
   "setGenLockAutoType": "Po auto-type",
   "setGenLockOrSleep": "Keď je počítač zamknutý alebo uspaný",
   "setGenStorage": "Úložisko",
+  "setGenStorageLogout": "Odhlásiť",
   "setGenShowAdvanced": "Zobraziť pokročilé nastavenia",
   "setGenDevTools": "Zobraziť vývojárske nástroje",
   "setGenTryBeta": "Vyskúšať beta verziu do reštartu",
@@ -588,6 +589,9 @@
   "dropboxSetupDesc": "Pre použitie samostatnej Dropbox aplikácie sú vyžadované niektoré konfigurácie. Vytvorte vlastnú Dropbox aplikáciu a vyplňte jej kľúče nižšie.",
   "dropboxAppKey": "Aplikačný kľúč dropbox",
   "dropboxAppKeyDesc": "Skopírujte kľúč z aplikácie Dropbox (Vývojárske nastavenia)",
+  "dropboxAppKeyHint": "tvoj kľúč",
+  "dropboxAppSecret": "Diskrétny údaj dropboxu",
+  "dropboxAppSecretDesc": "Diskrétny údaj sa nachádza hneď vedľa aplikačného kľúča",
   "dropboxFolder": "Adresár aplikácie",
   "dropboxFolderDesc": "Pokiaľ vaša aplikácia používa celý Dropbox (nie len adresár aplikácie), nastavte tu adresár s kdbx súbormi",
   "dropboxFolderSettingsDesc": "Nastavte akýkoľvek adresár vo vašom Dropboxe, kde budú uložené súbory (koreňový adresár je predvolený)",
