--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -434,6 +434,7 @@
   "setGenLockAutoType": "Otomatik yazımdan sonra",
   "setGenLockOrSleep": "Bilgisayar kilitlendiğinde veya uykuya geçtiğinde",
   "setGenStorage": "Depolama",
+  "setGenStorageLogout": "Oturumu kapat",
   "setGenShowAdvanced": "Gelişmiş ayarları göster",
   "setGenDevTools": "Geliştirici araçlarını göster",
   "setGenTryBeta": "Yeniden başlatılana kadar beta sürümünü dene",
@@ -588,6 +589,7 @@
   "dropboxSetupDesc": "Dropbox'ı kendi kendine barındırılan bir uygulamada kullanmak için bazı yapılandırmalar gerekir. Lütfen kendi Dropbox uygulamanızı oluşturun ve aşağıdaki anahtarı girin.",
   "dropboxAppKey": "Dropbox uygulama anahtarı",
   "dropboxAppKeyDesc": "Anahtarı Dropbox uygulamanızdan kopyalayın (Geliştirici ayarları)",
+  "dropboxAppKeyHint": "uygulama anahtarınız",
   "dropboxFolder": "Uygulama klasörü",
   "dropboxFolderDesc": "Uygulamanız tüm Dropbox'lara bağlıysa (uygulama klasörü değil), klasörü kdbx dosyalarınızla buraya ayarlayın",
   "dropboxFolderSettingsDesc": "Dropbox'ınızda dosyaların depolanacağı herhangi bir klasörü seçin (öntanımlı olarak kök klasör)",
