--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -434,6 +434,7 @@
   "setGenLockAutoType": "sur saisie auto",
   "setGenLockOrSleep": "Quand l'ordinateur est verrouillé ou mis en sommeil",
   "setGenStorage": "Stockage",
+  "setGenStorageLogout": "Déconnexion",
   "setGenShowAdvanced": "Afficher les paramètres avancés",
   "setGenDevTools": "Afficher les outils de développement",
   "setGenTryBeta": "Essayer une fois la version beta ",
@@ -588,6 +589,9 @@
   "dropboxSetupDesc": "Une configuration particulière est nécessaire pour utiliser Dropbox dans une application auto-hébergée. Merci de créer votre propre application Dropbox et d'inscrire sa clé ci-dessous.",
   "dropboxAppKey": "Clé Dropbox",
   "dropboxAppKeyDesc": "Copier la clé de votre appli Dropbox (Réglages développeur)",
+  "dropboxAppKeyHint": "Votre \"Dropbox App Key\"",
+  "dropboxAppSecret": "Votre \"Dropbox App Secret\"",
+  "dropboxAppSecretDesc": "Votre \"Dropbox App Secret\" peut être trouvée à côté de votre \"Dropbox App Key\".",
   "dropboxFolder": "Dossier Appli",
   "dropboxFolderDesc": "Si votre appli est liée à l'espace Dropbox entier (et non un dossier), définir le dossier avec vos fichiers Kdbx ici",
   "dropboxFolderSettingsDesc": "Sélectionner un dossier dans votre Dropbox où les fichiers sont stockés (à la racine par défaut)",
