themes and languages

--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -275,7 +275,7 @@
   "detDelToTrashBody": "Запис буде переміщено до смітника.",
   "detFieldCopied": "скопійовано",
   "detFieldCopiedTime": "Копіюється {} секунд",
-  "detCopyHint": "Ви маєте можливість копіювати значення поля натиснувши мишкою по його назві",
+  "detCopyHint": "Ви можете скопіювати значення поля, клацнувши на його назві",
   "detMore": "більше",
   "detClickToAddField": "натисніть, щоб додати нове поле",
   "detMenuAddNewField": "Додати нове поле",
@@ -434,6 +434,7 @@
   "setGenLockAutoType": "При автовведенні",
   "setGenLockOrSleep": "Коли комп'ютер заблоковано або відправлено у сон",
   "setGenStorage": "Сховище",
+  "setGenStorageLogout": "Вийти",
   "setGenShowAdvanced": "Показати додаткові налаштування (ці установки можуть бути небезпечні)",
   "setGenDevTools": "Засоби розробки",
   "setGenTryBeta": "Використовувати бета-версію до перезавантаження",
@@ -578,7 +579,7 @@
   "setHelpProblems1": "Якщо щось піде не так, будь ласка {}",
   "setHelpProblems2": "або {}",
   "setHelpOpenIssue": "відкрийте Issue на GitHub",
-  "setHelpContactLink": "зв'язатися з розробником безпосередньо",
+  "setHelpContactLink": "Зв'язатися з розробником",
   "setHelpAppInfo": "Інформація про програму",
   "setHelpOtherPlatforms": "Інші платформи",
   "setHelpDesktopApps": "Desktop версії",
@@ -588,6 +589,9 @@
   "dropboxSetupDesc": "Для використання Dropbox в окремій програмі необхідне додаткове налаштування. Створіть власну програму Dropbox та введіть внизу її ключ.",
   "dropboxAppKey": "Ключ програми Dropbox",
   "dropboxAppKeyDesc": "Скопіюйте ключ з вашої програми Dropbox (налаштування для розробників)",
+  "dropboxAppKeyHint": "Ваш ключ програми",
+  "dropboxAppSecret": "Пароль програми Dropbox",
+  "dropboxAppSecretDesc": "Пароль можна знайти навпроти ключа програми",
   "dropboxFolder": "Папка програми",
   "dropboxFolderDesc": "Якщо ваш додаток пов'язано з усім сховищем Dropbox (а не окремою папкою), введіть тут назву папки з файлами kdbx",
   "dropboxFolderSettingsDesc": "Оберіть будь-яку папку в Dropbox, де будуть зберігатися файли (кореневу папку за замовчуванням)",
