--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -68,6 +68,9 @@
   "help": "ヘルプ",
   "settings": "設定",
   "plugins": "プラグイン",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
   "cache": "キャッシュ",
   "file": "ファイル",
   "webdav": "WebDAV",
@@ -144,6 +147,8 @@
   "genPsAmbiguous": "見分けにくい文字記号",
   "genPsInclude": "以上に追加して含める記号",
   "genPsExample": "生成されるパスワードの例",
+  "genPsPattern": "パターン",
+  "genPsPatternHelp": "パターンは、文字を選択するためのカスタムルールを指定するために使用することができます。例えば、「1-AA」は数字で始まり、ダッシュと2文字で始まるパスワードを生成します。これらの記号を使用することができます",
   "keyChangeTitleRemote": "マスターキーが変更されました",
   "keyChangeMessageRemote": "このデータベースのマスターキーは変更されました。新しいキーを入力してください",
   "keyChangeTitleExpired": "マスターキーが期限切れです",
@@ -226,7 +231,7 @@
   "openFileNoCacheError": "キャッシュストレージにファイルが見つかりません。 これは、ブラウザのストレージがクリーンアップされたために発生する可能性があります。 ファイルを開くには、KeeWebから削除して再度追加してください。",
   "detAttDownload": "Shift+添付ファイルボタンでダウンロード、または",
   "detAttDelToRemove": "Deleteで削除",
-  "detAttSave": "保存",
+  "detAttSave": "として保存",
   "detEmpty": "あなたのパスワードがここに表示されます",
   "detGroupRestore": "このグループを復元するには、ごみ箱の外のグループにドラッグしてください",
   "detHistoryClickPoint": "エントリ履歴をクリックするとタイムラインの状態を表示します",
@@ -424,6 +429,7 @@
   "setGenLockAutoType": "自動入力の実行後",
   "setGenLockOrSleep": "コンピュータがロックされたかスリープ状態に移行したとき",
   "setGenStorage": "ストレージ",
+  "setGenStorageLogout": "ログアウト",
   "setGenShowAdvanced": "高度な設定を表示する",
   "setGenDevTools": "デベロッパーツールを表示する",
   "setGenTryBeta": "再起動するまでベータバージョンを試用する",
@@ -457,6 +463,9 @@
   "setFileNames": "名前",
   "setFileDefUser": "デフォルトのユーザー",
   "setFileEnableTrash": "ゴミ箱を有効にする",
+  "setFileHistLimited": "古い履歴を自動で削除します",
+  "setFileHistDisabled": "履歴を記録しません",
+  "setFileHistUnlimited": "履歴をいつまでも残します",
   "setFileHistLen": "ひとつのエントリーについて記録しておく履歴の数",
   "setFileHistSize": "ひとつのファイルについて使用する履歴ファイルのサイズ(MB)",
   "setFileBackups": "バックアップ",
